Fix alignment.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,9 +5,9 @@
 
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  height: 100vh;
-  overflow: auto;
   display: flex;
+  height: 100%;
+  min-height: 100vh;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -86,7 +86,19 @@ nav .avatar{
   margin: 2vh auto;
   padding: 5% 2%;
   border: 1px solid black;
-  width: 95%;
+  width: 90vw;
+  overflow-y: hidden;
+  z-index: 49;
+}
+
+.index-match-container {
+  width: 70vw;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  
 }
 
 .content-h1 {
@@ -143,11 +155,17 @@ form button {
 .match-container {
   margin: 15px auto;
   padding: 5px;
+  width: 70vw;
+  height: 20vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid black;
 }
 
-.match-container, .match-details {
-  width: 90%;
-  height: 80%;
+.match-details {
+  width: 70vw;
+  height: 20vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -310,9 +328,11 @@ footer {
   color: white;
   box-shadow: 0px 0px 10px gray;
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   bottom: 0;
+  z-index: 49;
 }
 
 .backdrop {
